Prevent overflow-x by limit image size in analysis content tab

--- a/mod_app/static/css/tabbed-area.css
+++ b/mod_app/static/css/tabbed-area.css
@@ -90,3 +90,23 @@ body:has(.tab-selection.is-sticky) .tab-selection {
     }
   }
 }
+
+@media screen and (min-width: 767px) and (max-width: 992px) {
+  .active[name="content"] {
+    img {
+      max-width: 500px;
+      max-height: 100% !important;
+      object-fit: contain;
+    }
+  }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+  .active[name="content"] {
+    img {
+      max-width: 700px;
+      max-height: 100% !important;
+      object-fit: contain;
+    }
+  }
+}
